--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-pdf": "^7.1.3",
     "react-router-dom": "^6.13.0",
     "sort-by": "^1.2.0"
   },
